feat: 添加 为处方添加药物api接口
