# router/base_prescription.go
@@ -11,5 +11,6 @@ func InitPrescriptionRouter(Router *gin.RouterGroup) {
 		prescription.POST("add",api.AddPrescription)
 		prescription.POST("submit",api.SubmitPrescription)
 		prescription.POST("list",api.ListPrescription)
+		prescription.POST("addDrug",api.AddPrescriptionDrug)
 	}
 }
